namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: "blog"
  labels:
    name: "blog"
  name: "wallet"
  labels:
    name: "wallet"
