blog-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blog
  labels:
    name: blog
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: blog
    spec:
      containers:
        - name: blog
          image: wordpress:4.8.3-php7.1-apache
          ports:
            - containerPort: 80
          volumeMounts:
              # This name must match the volumes.name below.
            - name: nfs
              mountPath: "/var/www/html"
      volumes:
        - name: nfs
          nfs:
            server: 10.104.230.238
            path: "/exports"
