blog-redirect-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blog-redirect
  labels:
    name: blog-redirect
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: blog-redirect
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: default-pool
      containers:
        - name: blog-redirect
          image: schmunk42/nginx-redirect
          ports:
            - containerPort: 80
