jenkins-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
  labels:
    name: jenkins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: jenkins
    spec:
      containers:
        - image: kter/jenkins-bundler:0.1
          name: jenkins
          ports:
            - containerPort: 8080
              name: jenkins
          volumeMounts:
            - name: jenkins
              mountPath: "/var/jenkins_home"
      volumes:
        - name: jenkins
          hostPath:
            path: /data/jenkins
      nodeSelector:
        kubernetes.io/hostname: kube-master-01
