kube-slack.yml
#kind: ClusterRole
#apiVersion: rbac.authorization.k8s.io/v1beta1
#metadata:
#name: kube-slack
#rules:
#- apiGroups: [""]
#resources: ["pods"]
#verbs:
#- get
#- watch
#- list
#---
#kind: ClusterRoleBinding
#apiVersion: rbac.authorization.k8s.io/v1beta1
#metadata:
#name: kube-system
#roleRef:
#kind: ClusterRole
#name: kube-slack
#apiGroup: rbac.authorization.k8s.io
#subjects:
#- kind: ServiceAccount
#name: default
#namespace: kube-system
#---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-slack
  namespace: kube-system
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ""
      name: kube-slack
      labels:
        app: kube-slack
    spec:
      containers:
      - name: kube-slack
        image: willwill/kube-slack:v3.0.3
        resources:
          requests:
            memory: 30M
            cpu: 5m
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      - key: CriticalAddonsOnly
        operator: Exists
      nodeSelector:
       cloud.google.com/gke-nodepool: default-pool
