mysql-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql
  labels:
    name: mysql
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: mysql
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: db-pool
      containers:
        - image: mysql:5.6.36
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-db-data
              mountPath: "/var/lib/mysql"
      volumes:
        - name: mysql-db-data
          gcePersistentDisk:
            pdName: db-data
            fsType: ext4
