sinkancenice-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: shinkansenice
  labels:
    name: shinkansenice
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: shinkansenice
    spec:
      containers:
        - name: shinkansenice
          image: docker.io/kter/shinkancenice:0.2
