wallet-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wallet
  labels:
    name: wallet
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: wallet
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: default-pool
      containers:
        - name: wallet
          image: docker.io/kter/wallet:0.3
          ports:
            - containerPort: 3000
