wordpress-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blog
  labels:
    name: blog
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: blog
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: web-pool
      containers:
        - name: blog
          image: wordpress:4.8.0-php7.1-apache
          ports:
            - containerPort: 80
          volumeMounts:
              # This name must match the volumes.name below.
            - name: wordpress-data
              mountPath: "/var/www/html"
      volumes:
        - name: wordpress-data
          gcePersistentDisk:
            # This disk must already exist.
            pdName: blog-data
            fsType: ext4
