blog-redirect-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-redirect
  labels:
    name: wordpress-redirect
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    name: blog-redirect
