blog-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jekyll
  labels:
    name: jekyll
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: jekyll
    - port: 9913
      targetPort: 9913
      protocol: TCP
      name: nginx-exporter
  type: NodePort
  selector:
    name: blog
