jenkins-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    name: jenkins
spec:
  ports:
    - port: 8080
  selector:
    name: jenkins
