mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    name: mysql
  namespace: blog
spec:
  ports:
    - port: 3306
  selector:
    name: mysql
