nfs-service.yml
kind: Service
apiVersion: v1
metadata:
  name: nfs-server
  namespace: blog
spec:
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
  selector:
    role: nfs-server
