wallet-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wallet
  labels:
    name: wallet
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    name: wallet
