ingress.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  labels:
    k8s-app: nginx-ingress-controller
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: nginx-ingress-controller
    spec:
      hostNetwork: true
      terminationGracePeriodSeconds: 60
      containers:
      - image: gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.13
        name: nginx-ingress-controller
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          hostPort: 80
        - containerPort: 443
          hostPort: 443
        args:
        - /nginx-ingress-controller
        - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
        - --configmap=$(POD_NAMESPACE)/nginx-ingress-controller
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
  namespace: default
spec:
  tls:
  - hosts:
    - blog.kter.jp
    - kter.jp
    - wallet.kter.jp
    secretName: blog-tls
  rules:
  - host: blog.kter.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
  - host: kter.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
  - host: wallet.kter.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: wallet
          servicePort: 3300
